--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,6 +15,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <uses-library android:name="android.test.runner"
+            android:required="false" />
+        <uses-library android:name="android.test.base"
+            android:required="false" />
+        <uses-library android:name="android.test.mock"
+            android:required="false" />
         <activity android:name=".Activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,10 +30,22 @@
         </activity>
         <activity android:name=".Activities.SignUp" />
         <activity android:name=".Activities.LoginActivity" />
-        <activity android:name=".Activities.HomePage" />
         <activity android:name=".Activities.AddPolicy" />
         <activity android:name=".Activities.PolicyDetails" />
-        <activity android:name=".Activities.UpdatePolicy"></activity>
+        <activity android:name=".Activities.UpdatePolicy" />
+        <activity android:name=".Activities.HomePage">
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
+
+        <activity android:name=".Activities.SearchResultsActivity">
+
+        <intent-filter>
+            <action android:name="android.intent.action.SEARCH" />
+        </intent-filter>
+
+    </activity>
     </application>
 
 </manifest>
